<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="lai.christine.hw3.ContactListActivity" >

    <item
        android:id="@+id/action_done"
        android:orderInCategory="100"
        android:icon="?attr/actionIconDone"
        android:title="@string/done"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_cancel"
        android:orderInCategory="100"
        android:icon="?attr/actionIconCancel"
        android:title="@string/cancel"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
